--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+#root {
+  position: relative;
+}
+
+/* fonts */
+@font-face {
+  font-family: "Heebo-Bold";
+  src: url("../public/assets/fonts/Heebo-Bold.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Heebo-ExtraBold";
+  src: url("../public/assets/fonts/Heebo-ExtraBold.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Heebo-Light";
+  src: url("../public/assets/fonts/Heebo-Light.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Heebo-Regular";
+  src: url("../public/assets/fonts/Heebo-Regular.ttf") format("truetype");
 }
