--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,11 @@ code {
 }
 
 /* fonts */
+
+@font-face {
+  font-family: "Heebo-Medium";
+  src: url("../public/assets/fonts/Heebo-Medium.ttf") format("truetype");
+}
 @font-face {
   font-family: "Heebo-Bold";
   src: url("../public/assets/fonts/Heebo-Bold.ttf") format("truetype");
@@ -36,4 +41,17 @@ code {
 @font-face {
   font-family: "Heebo-Regular";
   src: url("../public/assets/fonts/Heebo-Regular.ttf") format("truetype");
+}
+
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(10vh);
+  visibility: hidden;
+  transition: opacity 0.6s ease-out, transform 1s ease-out;
+  will-change: opacity, visibility;
+}
+.fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
 }
