--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
+html {
+  background-color: #000;
+}
 body {
+  background-color: #000;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -41,17 +45,4 @@ code {
 @font-face {
   font-family: "Heebo-Regular";
   src: url("../public/assets/fonts/Heebo-Regular.ttf") format("truetype");
-}
-
-.fade-in-section {
-  opacity: 0;
-  transform: translateY(10vh);
-  visibility: hidden;
-  transition: opacity 0.6s ease-out, transform 1s ease-out;
-  will-change: opacity, visibility;
-}
-.fade-in-section.is-visible {
-  opacity: 1;
-  transform: none;
-  visibility: visible;
 }
