--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,17 @@ html {
 }
 body {
   background-color: #000;
+  max-width: 100vw;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+html,
+body {
+  overflow-x: hidden;
 }
 
 code {
