--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,17 @@
 html {
-  background-color: #000;
+  background-color: #000 !important;
+  overflow-x: hidden;
 }
 body {
   background-color: #000;
   max-width: 100vw;
+  overflow-x: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-html,
-body {
-  overflow-x: hidden;
 }
 
 code {
