feat: Add claim airdrop page

--- a/src/index.css
+++ b/src/index.css
@@ -7,16 +7,16 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, Heebo-Regular, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Heebo-Regular, Menlo, Monaco, Consolas,
+    "Courier New", monospace;
 }
 
 * {
@@ -25,6 +25,9 @@ code {
 
 #root {
   position: relative;
+}
+span {
+  font-family: Heebo-Regular;
 }
 
 /* fonts */
