feat: Add vote page

--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,13 @@ code {
   position: relative;
 }
 span,
+div,
 button {
   font-family: Heebo-Regular;
+}
+.column {
+  display: flex;
+  flex-direction: column;
 }
 
 /* fonts */
